--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Liwen Luo</b></div><br>
                 <p><b>liwen.luo@anu.edu.au</b><br>
                 <p>Master of Machine Learning and Computer Vision<br>
                 Australian National University<br>
