--- a/index.html
+++ b/index.html
@@ -63,8 +63,23 @@
 					<h3>Volunteer Experience</h3>
 					<p>Course Representative for:<br>
 					COMP6528 (Computer Vision)<br>
-					COMP6262 (Logic)<br>
-					COMP8535 (Engineering Data Analytics)</p>
+					COMP8535 (Engineering Data Analytics)<br>
+					COMP6262 (Logic)</p>
+
+                    <h3>Work Experience</h3>
+                    <p><b>Tianzhi International Accounting Firm</b><br>
+                    Position: Auditor<br>
+                    Duration: September 2021 - December 2021<br>
+                    Responsibilities: Participated in the internal control audit of various departments.</p>
+                    
+                    <p><b>Shanghai Palan DataRx Data Technology</b><br>
+                    Position: Statistical Analyst<br>
+                    Duration: December 2021 - May 2022<br>
+                    Responsibilities: Responsible for the statistical analysis part of the project using R.</p>
+
+                    <h3>Research Achievements</h3>
+                    <p>Awards: The American Statistical Association (ASA) DataFest 2020 Best Insight Award</p>
+                    <p><b>Active Intelligence Research Challenge Award</b></p>
                 </div>
             </div> 
 
@@ -94,6 +109,9 @@
     <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">Plain Academic</a> 
     
 </body>
+
+</html>
+
 
 </html>
 
