--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 
                     <h3>Research Achievements</h3>
                     <p>Awards: The American Statistical Association (ASA) DataFest 2020 Best Insight Award</p>
-                    <p><b>Active Intelligence Research Challenge Award</b></p>
+                    <p>Active Intelligence Research Challenge Award</p>
                 </div>
             </div> 
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <!-- Add your image here -->
-                <img src="your_image_url_here.jpg" alt="Your Image" class="img-responsive" style="width:100%;"><br>
+                <img src="https://github.com/Luoshanji99/Luoshanji99.github.io/raw/main/pagehome.jpg" alt="Your Image" class="img-responsive" style="width:100%;"><br>
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Liwen Luo</b></div><br>
                 <p><b>u6505794@anu.edu.au</b><br>
                 <p>Master of Machine Learning and Computer Vision<br>
